Thymeleaf Is Also Beautiful In A Classy Way

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-twilio.account_sid = xxxxxxxxxxxxxxx
-twilio.auth_token = xxxxxxxxxxxxx
-twilio.trial_number = xxxxxxxx
+twilio.account_sid = AC10753272daaf4243f662a68f9462a870
+twilio.auth_token = 0f842f8d29967318f8dc5a7b43dd27ef
+twilio.trial_number = +16464614946
 
 
