Closing api account, use ur own twilio tokens

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-twilio.account_sid = ACd5552e978a48dfedb4f3bc8c36feaa20
-twilio.auth_token = b0338f11c6344f45047a1b69db472b20
-twilio.trial_number = +12563049232
+twilio.account_sid = useurown
+twilio.auth_token = useurown
+twilio.trial_number = +useurown
 
 
