--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-twilio.account_sid = useurown
-twilio.auth_token = useurown
-twilio.trial_number = +useurown
+twilio.account_sid = Your_Account_Sid
+twilio.auth_token = Your_Auth_Token
+twilio.trial_number = +Your_Trial_Number
 
 
